--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Welcome to Our Restaurant</h1>
 
     <h2>Menu</h2>
-    <iframe src="/Assets/menu.html" title="Menu"></iframe>
+    <iframe src="menu.html" title="Menu"></iframe>
 
 </body>
 </html>
